src/test/deca/syntax/valid/class/classes_with_new.deca
/// Description:
// 	  Test syntax with 'new' token
// Resultats:
// 	  
// Historique:
// 	  cree le 12/01/2023
class A extends B {}
{
    A a = new A();
}